CI: configure token permissions
This will allow us to set the default GITHUB_TOKEN to read-only and not
write permissions.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: '0 0 * * *'
 
+permissions:
+  contents: read # minimal permissions that we have to grant
+
 jobs:
   Acceptance:
     name: Acceptance Tests
